String Operation no comments

--- a/Python101.ipynb
+++ b/Python101.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Python101.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOnputYgYLbDW67WV8aL1gW",
+      "authorship_tag": "ABX9TyP1Ve+C5AYYwcqqEKMslbs7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +61,7 @@
         "id": "8mLNDnwOLCQa",
         "outputId": "800b24e6-7ba2-4817-e774-81602639ecb0"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -92,7 +91,7 @@
         "id": "WlGIadfGLfAS",
         "outputId": "a60c5822-69b9-4320-d7a5-139ef2f45555"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -121,7 +120,7 @@
         "id": "Ngk8GTooL2V7",
         "outputId": "48101abe-7b67-4700-f79d-f5dac781c727"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,7 +147,7 @@
         "id": "z-lFAOLjL7Ee",
         "outputId": "30b7f63f-5033-435c-f38c-c46a927796c8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -177,7 +176,7 @@
         "id": "b0rgn5qJNAhi",
         "outputId": "9bb1b75c-377e-4ae8-cf2a-473bc21cd483"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -204,7 +203,7 @@
         "id": "7MmksDv3NCdP",
         "outputId": "320f58ec-0aa4-448b-8da6-ed1ae8c2d1ee"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -230,7 +229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -268,7 +267,7 @@
       "metadata": {
         "id": "EET8NKtmODEu"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -283,7 +282,7 @@
         "id": "IlYcEBizOJ3w",
         "outputId": "df16b21d-0f90-4868-c506-9a98c4476c6d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -305,7 +304,7 @@
       "metadata": {
         "id": "2icDbKPSOQCC"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -321,7 +320,7 @@
         "id": "MBUXg_fkOXvo",
         "outputId": "7f8a8041-b661-4a75-e3de-9ec8d9a7d2e8"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -350,7 +349,7 @@
         "id": "NTAApI7MOapA",
         "outputId": "9c31a56c-f5da-419f-9b5b-30987e95cb3f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +388,7 @@
         "id": "mTRTgDQJPQAu",
         "outputId": "a2c749b3-0038-458a-fef8-752ed2f5836c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -414,7 +413,7 @@
         "id": "Jegpq9tZPni0",
         "outputId": "77f3cb13-6685-4480-b0b6-796927fbf362"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -452,7 +451,7 @@
         "id": "sbSQN1K8Q0Uw",
         "outputId": "d7cc9336-869c-434f-e2fc-c910e4dee4a3"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +476,7 @@
         "id": "4OEhGRVkPxgI",
         "outputId": "9d5badde-c3a2-4bdc-d9da-1dcf8412af11"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,7 +496,7 @@
       "metadata": {
         "id": "IVkhjdfVR8zT"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -512,7 +511,7 @@
         "id": "ZFrumke5UT4C",
         "outputId": "3c84b4ed-2a08-43b7-a30c-410534940eed"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -549,7 +548,7 @@
       "metadata": {
         "id": "EQfP9jDJVKIq"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -560,7 +559,7 @@
       "metadata": {
         "id": "J7PS4iOfVNl-"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -575,7 +574,7 @@
         "id": "ttSEl0rdVhDl",
         "outputId": "aeabc9f8-9fcc-41bc-b404-cabc8b5a65ed"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,7 +594,7 @@
       "metadata": {
         "id": "J13-nB4jVlB0"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -610,7 +609,7 @@
         "id": "qaUsL62mVqNW",
         "outputId": "f4f23b7f-1f0f-4313-e8fa-2c5dfde7981a"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -639,7 +638,7 @@
       "metadata": {
         "id": "pCdZGuPAWkZj"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -655,7 +654,7 @@
         "id": "rZTcmqmmWqmH",
         "outputId": "3a5f859f-76cd-4bf8-e3f1-2425a753583b"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -684,7 +683,7 @@
       "metadata": {
         "id": "1W6Fw4O0XYRt"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -699,7 +698,7 @@
         "id": "jrS-hyTOXy3B",
         "outputId": "efcb3d94-d69a-4d7d-9611-53f6c2431ddb"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -730,7 +729,7 @@
       "metadata": {
         "id": "v2eqxXOhZqdn"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -741,7 +740,7 @@
       "metadata": {
         "id": "72f7bF8DZvsF"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -761,7 +760,7 @@
       "metadata": {
         "id": "6GTXGczKbAXP"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -786,7 +785,7 @@
         "id": "7_7wAc62bhRU",
         "outputId": "79e43a12-c510-4bea-ba8b-fd36101d60d5"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -809,7 +808,7 @@
         "id": "O8VJ3NX7bzR1",
         "outputId": "431a68cd-f5b0-45ba-a6c9-bcc758761d39"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -832,7 +831,7 @@
         "id": "7ysVnT-McjQt",
         "outputId": "8ba66780-1018-4829-a3b4-5b3d80d2853a"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -864,7 +863,7 @@
         "id": "ZToyeNUidObL",
         "outputId": "3e124a50-28cc-44a6-c74f-8a753f5d6cd4"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -884,7 +883,7 @@
       "metadata": {
         "id": "WvY-h2bYeG-s"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -900,7 +899,7 @@
         "id": "9cPNF6fGeOM3",
         "outputId": "56566cc6-9e89-441a-957b-fb63cf503d7c"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -923,7 +922,7 @@
         "id": "PT0BhHCOeoYf",
         "outputId": "be8b24c0-b28e-4112-d3c1-d7b302d8b2e2"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -950,7 +949,7 @@
         "id": "xGJyumOKeyPs",
         "outputId": "adf90ee1-16eb-41b0-c58a-bc870db11022"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -978,7 +977,7 @@
         "id": "Yt7lTh0me2c8",
         "outputId": "211408dc-c41b-4ee2-9f75-65882c3f731f"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1005,7 +1004,7 @@
         "id": "XncGNZkYfICy",
         "outputId": "8227bb19-d809-4118-cc88-92800bd42d7a"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1031,7 +1030,7 @@
         "id": "MuauFzAPfoeC",
         "outputId": "b26df8af-75f1-4ae9-fefc-6853c51528c5"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1058,7 +1057,7 @@
         "id": "ZO5dKmfcfuYK",
         "outputId": "4272a5a2-f241-4d47-d6f9-c440e63b4676"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1105,7 +1104,7 @@
         "id": "AFJ38gi9gNw6",
         "outputId": "cdfabbbb-47a3-4683-b1ad-2941572ea32f"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1131,7 +1130,7 @@
         "id": "JE-AsWtxhEMc",
         "outputId": "1fbc1a7d-7ea5-4419-81f3-3d1df1f51e72"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1157,7 +1156,7 @@
         "id": "CfOHgJKahX5R",
         "outputId": "0e63dfb0-f1fb-4941-b49d-f929aca1e62f"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1183,7 +1182,7 @@
         "id": "MGWaHo4nhhac",
         "outputId": "00fee7c8-ee5b-4c6b-dd45-289436fb6c38"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1209,7 +1208,7 @@
         "id": "PWBS8cwThuhL",
         "outputId": "d8342cff-ebc8-4fa0-9738-18979335e87b"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1235,7 +1234,7 @@
         "id": "meXAmjIAiC0H",
         "outputId": "d999e357-c3d0-45a0-dc37-9825c2c3e96d"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1261,7 +1260,7 @@
         "id": "fax5AclfiGs3",
         "outputId": "0a00ded4-5068-479d-bdf4-af0e59383c88"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1285,12 +1284,292 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### ``` + -> cincat,  * -> repeat ```"
+      ],
+      "metadata": {
+        "id": "LQ_otLBW0vAQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "st_test1 = 'Department of Statistics, '\n",
+        "st_test2 = 'Faculty of Science'"
+      ],
+      "metadata": {
+        "id": "CIH6xBkUzjk9"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(st_test1+st_test2)"
+      ],
+      "metadata": {
+        "id": "NUA5hyTT0f_B",
+        "outputId": "0a7c09d8-3a28-4381-d88f-c20e20015120",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Department of Statistics, Faculty of Science\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(10*'t')"
+      ],
+      "metadata": {
+        "id": "_Y-iSmc81Kjb",
+        "outputId": "a9ba45d1-e542-4e5b-f0e0-b8f6da2b24ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tttttttttt\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(3*st_test1)"
+      ],
+      "metadata": {
+        "id": "2Rr2rtF51iMJ",
+        "outputId": "38a98f55-9557-4d3a-eab7-78bd06afd965",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Department of Statistics, Department of Statistics, Department of Statistics, \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ``` replace() ``` แทนที่ string"
+      ],
+      "metadata": {
+        "id": "FY4Gdnjp1rZF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "st_test1.replace('e',' ')"
+      ],
+      "metadata": {
+        "id": "ODNzP9kK10vh",
+        "outputId": "6648d729-2f40-4917-dc95-abf4c7ac8405",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'D partm nt of Statistics, '"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "st_test1.replace('e',' ')"
+      ],
+      "metadata": {
+        "id": "Z116dKte1-6o",
+        "outputId": "70089a32-1f08-4856-bb00-f9e5a9bbbba5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'D partm nt of Statistics, '"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "st_test1"
+      ],
+      "metadata": {
+        "id": "G0Dk0ABl2GU0",
+        "outputId": "6f9771e7-5cfd-4f2a-f4cc-7b19f56b2f41",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Department of Statistics, '"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'Department of Statistics, '.replace('a','x')"
+      ],
+      "metadata": {
+        "id": "JiktW4En3GKk",
+        "outputId": "6e13be05-780c-438a-a5e8-8c3bcce361ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Depxrtment of Stxtistics, '"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ```split()``` แยก string"
+      ],
+      "metadata": {
+        "id": "BXYg99_72QgJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'a b c d e f g'.split()"
+      ],
+      "metadata": {
+        "id": "Vd2KT5ZD2tbF",
+        "outputId": "9cad6ff5-61e8-4c6f-b2cb-e9d62d45777e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 'b', 'c', 'd', 'e', 'f', 'g']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'a,b/c,d e/f g'.split('/')"
+      ],
+      "metadata": {
+        "id": "7swsXzxY3k14",
+        "outputId": "62d01a0b-e8db-42a6-ecd5-83600f595fe7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a,b', 'c,d e', 'f g']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "5HTE9e3IibE5"
+        "id": "9In8TN6T33uZ"
       },
       "execution_count": null,
       "outputs": []
