Dictionary + Numpy Array + Gr1HW3

--- a/Data_Structure.ipynb
+++ b/Data_Structure.ipynb
@@ -6,7 +6,7 @@
       "name": "Data Structure.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMaVYzUT79VtK6IvZSFVr6Q",
+      "authorship_tag": "ABX9TyOPiGpB6KXpEGho2X+/nYpv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1333,11 +1333,11 @@
         "print(ex)"
       ],
       "metadata": {
-        "id": "Tz4zSwYMM3Mt",
-        "outputId": "132048f5-0ef0-4a37-b3a9-569535130bb7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Tz4zSwYMM3Mt",
+        "outputId": "132048f5-0ef0-4a37-b3a9-569535130bb7"
       },
       "execution_count": 1,
       "outputs": [
@@ -1357,11 +1357,11 @@
         "print(sp_ex)"
       ],
       "metadata": {
-        "id": "0zKAkK8-NBBc",
-        "outputId": "284fbe57-302a-4c33-a4cb-35fc59b8f916",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0zKAkK8-NBBc",
+        "outputId": "284fbe57-302a-4c33-a4cb-35fc59b8f916"
       },
       "execution_count": 2,
       "outputs": [
@@ -1381,11 +1381,11 @@
         "print(total_sec)"
       ],
       "metadata": {
-        "id": "rhg-qGKoNPKy",
-        "outputId": "3f1e7386-42f0-4601-bfbe-7a7fe5a7aae5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rhg-qGKoNPKy",
+        "outputId": "3f1e7386-42f0-4601-bfbe-7a7fe5a7aae5"
       },
       "execution_count": 8,
       "outputs": [
@@ -1404,11 +1404,11 @@
         "print(f'เวลา {ex} สามารถแปลงเป็นหน่วยวินาทีได้ {total_sec,} วินาที')"
       ],
       "metadata": {
-        "id": "llJNV6JbOg6K",
-        "outputId": "f1d0f37d-ba8b-4635-d85c-9b7700a391d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "llJNV6JbOg6K",
+        "outputId": "f1d0f37d-ba8b-4635-d85c-9b7700a391d8"
       },
       "execution_count": 9,
       "outputs": [
@@ -1467,12 +1467,12 @@
         "dict_a[1]"
       ],
       "metadata": {
-        "id": "q3wLbFKTPFA7",
-        "outputId": "03f4a3b8-612f-4bd8-825b-b179e6b75c85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "q3wLbFKTPFA7",
+        "outputId": "03f4a3b8-612f-4bd8-825b-b179e6b75c85"
       },
       "execution_count": 11,
       "outputs": [
@@ -1497,12 +1497,12 @@
         "dict_a['N']"
       ],
       "metadata": {
-        "id": "fx6ckM7kQfSb",
-        "outputId": "a5366710-88d7-4ec6-b780-ecb9d4efc41a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "fx6ckM7kQfSb",
+        "outputId": "a5366710-88d7-4ec6-b780-ecb9d4efc41a"
       },
       "execution_count": 12,
       "outputs": [
@@ -1527,11 +1527,11 @@
         "dict_a.keys()"
       ],
       "metadata": {
-        "id": "h3G96XjIQjCy",
-        "outputId": "2168f83a-fb01-4356-988b-c175c36d532a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "h3G96XjIQjCy",
+        "outputId": "2168f83a-fb01-4356-988b-c175c36d532a"
       },
       "execution_count": 13,
       "outputs": [
@@ -1553,11 +1553,11 @@
         "dict_a.values()"
       ],
       "metadata": {
-        "id": "4iIIx7yjQuO_",
-        "outputId": "7dd050b0-718f-40bb-aa3d-c1863c563150",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4iIIx7yjQuO_",
+        "outputId": "7dd050b0-718f-40bb-aa3d-c1863c563150"
       },
       "execution_count": 15,
       "outputs": [
@@ -1599,11 +1599,11 @@
         "dict_a"
       ],
       "metadata": {
-        "id": "QS5xKmkyRY_W",
-        "outputId": "35b42414-37ae-4333-fd31-0506b630a326",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QS5xKmkyRY_W",
+        "outputId": "35b42414-37ae-4333-fd31-0506b630a326"
       },
       "execution_count": 17,
       "outputs": [
@@ -1636,11 +1636,11 @@
         "dict_a"
       ],
       "metadata": {
-        "id": "zbSpCmRrRtSe",
-        "outputId": "be5608d0-b1f6-4d5b-c91b-b55e4b00e95a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zbSpCmRrRtSe",
+        "outputId": "be5608d0-b1f6-4d5b-c91b-b55e4b00e95a"
       },
       "execution_count": 19,
       "outputs": [
@@ -1693,7 +1693,7 @@
       "metadata": {
         "id": "NF7Qx12AUtEP"
       },
-      "execution_count": 20,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -1704,7 +1704,7 @@
       "metadata": {
         "id": "M2lh0h9UVuZU"
       },
-      "execution_count": 24,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -1715,7 +1715,7 @@
       "metadata": {
         "id": "_uZvwgpuVSj3"
       },
-      "execution_count": 28,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -1724,13 +1724,13 @@
         "arr_a"
       ],
       "metadata": {
-        "id": "aEQxyPEJVgo1",
-        "outputId": "fdc4aba6-626c-40ed-a90d-b6caf2885fb6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aEQxyPEJVgo1",
+        "outputId": "ae077b74-c22e-4404-fda8-fb59bf37f8e0"
       },
-      "execution_count": 30,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1740,7 +1740,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 90
         }
       ]
     },
@@ -1750,13 +1750,13 @@
         "list_A"
       ],
       "metadata": {
-        "id": "SEMHo-UfWCqW",
-        "outputId": "a952b016-d73a-484d-910e-b41b35a7d025",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SEMHo-UfWCqW",
+        "outputId": "fe563913-82cf-4618-f1be-340b8dca7198"
       },
-      "execution_count": 31,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1766,7 +1766,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 91
         }
       ]
     },
@@ -1776,13 +1776,13 @@
         "arr_a[0]"
       ],
       "metadata": {
-        "id": "AbYt_G5GVod9",
-        "outputId": "a85e818f-6110-4116-f6ac-7d9645bb63cb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AbYt_G5GVod9",
+        "outputId": "1d0bca84-b628-415c-c34e-cfb6a14b80f7"
       },
-      "execution_count": 32,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1792,7 +1792,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 92
         }
       ]
     },
@@ -1802,13 +1802,13 @@
         "list_A[0]"
       ],
       "metadata": {
-        "id": "bijUyCmbWGpD",
-        "outputId": "b5543030-934f-4522-e67c-69bd56cec1c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bijUyCmbWGpD",
+        "outputId": "4dd20eec-c509-4eee-ba5c-1eb1e0ec0d40"
       },
-      "execution_count": 33,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1818,7 +1818,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 93
         }
       ]
     },
@@ -1828,13 +1828,13 @@
         "5*arr_a # Matrix (scalar multiplication)"
       ],
       "metadata": {
-        "id": "K158VspxWJN3",
-        "outputId": "ece52d83-ab11-4b72-f12b-3134e1bdf11d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "K158VspxWJN3",
+        "outputId": "d6921194-fc43-4887-87e5-8d151f338720"
       },
-      "execution_count": 34,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1844,7 +1844,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 94
         }
       ]
     },
@@ -1854,13 +1854,13 @@
         "5*list_A"
       ],
       "metadata": {
-        "id": "0qqvRXXuWips",
-        "outputId": "e2b52139-c2fb-49cf-90ba-e79f6010f602",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0qqvRXXuWips",
+        "outputId": "2df473e5-1c6b-4239-d71b-1fd1510fdfcd"
       },
-      "execution_count": 35,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1870,7 +1870,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 95
         }
       ]
     },
@@ -1882,7 +1882,7 @@
       "metadata": {
         "id": "preZ8bkkXKUC"
       },
-      "execution_count": 36,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -1891,13 +1891,13 @@
         "print(arr_a)"
       ],
       "metadata": {
-        "id": "4_0-ahe7XXjn",
-        "outputId": "96f9d160-0024-4362-cb2e-65de54dcd313",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4_0-ahe7XXjn",
+        "outputId": "20a30d86-1e3f-4f22-8229-8a8ebe7b3afe"
       },
-      "execution_count": 37,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "stream",
@@ -1914,13 +1914,13 @@
         "arr_a + arr_b"
       ],
       "metadata": {
-        "id": "Cex4PaSCXo4f",
-        "outputId": "de2877fa-15a3-465d-d5b7-c6475c986184",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Cex4PaSCXo4f",
+        "outputId": "5ecc5e59-08d1-44e7-cfb6-5fdf3238b9f5"
       },
-      "execution_count": 38,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1930,20 +1930,35 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 100
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "arr_a.shape"
       ],
       "metadata": {
-        "id": "b-4jyTY0iSIU"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b-4jyTY0iSIU",
+        "outputId": "cec7242d-526e-45e2-f0ed-63876bfa0bd7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(5,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 101
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1982,11 +1997,11 @@
         "arr2_z"
       ],
       "metadata": {
-        "id": "p9eKjkMBZAZx",
-        "outputId": "f6e7de1e-4b53-429b-f8a5-c0e9ea210cb5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "p9eKjkMBZAZx",
+        "outputId": "f6e7de1e-4b53-429b-f8a5-c0e9ea210cb5"
       },
       "execution_count": 43,
       "outputs": [
@@ -2009,11 +2024,11 @@
         "arr2_z.shape"
       ],
       "metadata": {
-        "id": "KpEQrvewZpsm",
-        "outputId": "05dc2a72-b2fb-4777-effc-798906d09941",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KpEQrvewZpsm",
+        "outputId": "05dc2a72-b2fb-4777-effc-798906d09941"
       },
       "execution_count": 44,
       "outputs": [
@@ -2055,11 +2070,11 @@
         "arr2_3_5_0"
       ],
       "metadata": {
-        "id": "RCoFMOXZaNIq",
-        "outputId": "a0f44656-8d91-4d9c-e632-4ee100b72f32",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RCoFMOXZaNIq",
+        "outputId": "a0f44656-8d91-4d9c-e632-4ee100b72f32"
       },
       "execution_count": 46,
       "outputs": [
@@ -2094,11 +2109,11 @@
         "arr2_3_5_0[1,2] #ชี้"
       ],
       "metadata": {
-        "id": "quCeeoXbaoL7",
-        "outputId": "f1092e7b-677e-4927-b8d3-dbc6aa2040f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "quCeeoXbaoL7",
+        "outputId": "f1092e7b-677e-4927-b8d3-dbc6aa2040f8"
       },
       "execution_count": 77,
       "outputs": [
@@ -2122,19 +2137,19 @@
         "print(list_A)"
       ],
       "metadata": {
-        "id": "QyT5iOLBnBK6",
-        "outputId": "76728f73-7e08-40bd-dc62-ce9f0b93eb76",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QyT5iOLBnBK6",
+        "outputId": "fe75f4b4-8183-4a82-cfb9-aec354b2df93"
       },
-      "execution_count": 85,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[1, 2, 3, 4, 'Christmas']\n",
+            "[1, 2, 3, 4, 5]\n",
             "[1, 2, 3, 4, 'Christmas']\n"
           ]
         }
@@ -2166,11 +2181,11 @@
         "arr2_4_5_1"
       ],
       "metadata": {
-        "id": "yURzRa-DcHyu",
-        "outputId": "5e6b487c-4781-4cd2-8704-2e9b46cfe88d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yURzRa-DcHyu",
+        "outputId": "5e6b487c-4781-4cd2-8704-2e9b46cfe88d"
       },
       "execution_count": 54,
       "outputs": [
@@ -2206,11 +2221,11 @@
         "arr2_4_5_200"
       ],
       "metadata": {
-        "id": "imA-1a73cu6l",
-        "outputId": "b4086110-535b-4386-e913-d17cd5d09703",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "imA-1a73cu6l",
+        "outputId": "b4086110-535b-4386-e913-d17cd5d09703"
       },
       "execution_count": 56,
       "outputs": [
@@ -2253,12 +2268,12 @@
         "arr2_4_5_200 + arr2_3_5_0 #การบวก ลบ matrix shape ต้องเท่ากัน"
       ],
       "metadata": {
-        "id": "rpmJ4Reqc_4j",
-        "outputId": "dc8c9242-4b17-4837-f6ba-007e659078ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 165
-        }
+        },
+        "id": "rpmJ4Reqc_4j",
+        "outputId": "dc8c9242-4b17-4837-f6ba-007e659078ac"
       },
       "execution_count": 57,
       "outputs": [
@@ -2281,11 +2296,11 @@
         "arr2_4_5_200 + arr2_4_5_1"
       ],
       "metadata": {
-        "id": "kWhgxnjDdTLc",
-        "outputId": "de8f063d-3f67-4f78-f6db-258f015f920d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kWhgxnjDdTLc",
+        "outputId": "de8f063d-3f67-4f78-f6db-258f015f920d"
       },
       "execution_count": 58,
       "outputs": [
@@ -2324,11 +2339,11 @@
         "5*arr_a # Matrix (scalar multiplication)"
       ],
       "metadata": {
-        "id": "JSh3LicgecoK",
-        "outputId": "3724fdde-38bd-42be-c474-a37e9f52d002",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JSh3LicgecoK",
+        "outputId": "3724fdde-38bd-42be-c474-a37e9f52d002"
       },
       "execution_count": 59,
       "outputs": [
@@ -2374,11 +2389,11 @@
         "mat_a"
       ],
       "metadata": {
-        "id": "kH9ZujczgMvQ",
-        "outputId": "f5933830-22e5-4afe-87be-a28fb5b09711",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kH9ZujczgMvQ",
+        "outputId": "f5933830-22e5-4afe-87be-a28fb5b09711"
       },
       "execution_count": 66,
       "outputs": [
@@ -2401,11 +2416,11 @@
         "mat_b"
       ],
       "metadata": {
-        "id": "b7kIOoa9gOx6",
-        "outputId": "788334f8-ab4b-4ebb-fcae-37fc1cd206cb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "b7kIOoa9gOx6",
+        "outputId": "788334f8-ab4b-4ebb-fcae-37fc1cd206cb"
       },
       "execution_count": 67,
       "outputs": [
@@ -2428,11 +2443,11 @@
         "mat_c"
       ],
       "metadata": {
-        "id": "VxFkHyZWgbh9",
-        "outputId": "2c27a8c6-016b-497e-ea71-5945f7045a38",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VxFkHyZWgbh9",
+        "outputId": "2c27a8c6-016b-497e-ea71-5945f7045a38"
       },
       "execution_count": 68,
       "outputs": [
@@ -2465,11 +2480,11 @@
         "np.dot(mat_a,mat_c)"
       ],
       "metadata": {
-        "id": "pzppi0CbgkSf",
-        "outputId": "1ec2fd1f-6e29-425e-fcca-fed19cbd2107",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pzppi0CbgkSf",
+        "outputId": "1ec2fd1f-6e29-425e-fcca-fed19cbd2107"
       },
       "execution_count": 69,
       "outputs": [
@@ -2492,11 +2507,11 @@
         "np.dot(mat_b,mat_c)"
       ],
       "metadata": {
-        "id": "aX8CNirVgtOF",
-        "outputId": "1df9f2a9-a800-4b49-af86-b1ac7d76e5a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aX8CNirVgtOF",
+        "outputId": "1df9f2a9-a800-4b49-af86-b1ac7d76e5a9"
       },
       "execution_count": 70,
       "outputs": [
@@ -2528,11 +2543,11 @@
         "np.dot(mat_c,mat_a)"
       ],
       "metadata": {
-        "id": "8MCTXCAahBRG",
-        "outputId": "89455690-5866-4896-d75c-beb264836ef3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8MCTXCAahBRG",
+        "outputId": "89455690-5866-4896-d75c-beb264836ef3"
       },
       "execution_count": 72,
       "outputs": [
@@ -2556,11 +2571,11 @@
         "np.dot(mat_c,mat_b)"
       ],
       "metadata": {
-        "id": "0V1n_ghchE2n",
-        "outputId": "bcf0da01-7d12-4236-a168-32023bd0b462",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0V1n_ghchE2n",
+        "outputId": "bcf0da01-7d12-4236-a168-32023bd0b462"
       },
       "execution_count": 73,
       "outputs": [
@@ -2584,11 +2599,11 @@
         "mat_a*mat_b # คูณตัวตำแหน่งเดียวกัน"
       ],
       "metadata": {
-        "id": "U3LBXcVQhTJk",
-        "outputId": "a6c81bb4-3750-4bb4-d3fd-43f793aab96e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "U3LBXcVQhTJk",
+        "outputId": "a6c81bb4-3750-4bb4-d3fd-43f793aab96e"
       },
       "execution_count": 75,
       "outputs": [
@@ -2644,11 +2659,11 @@
         "HW3 "
       ],
       "metadata": {
-        "id": "cuI1cJjhi1-6",
-        "outputId": "8a50a515-6e4a-40e0-8294-aeeaccae548d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cuI1cJjhi1-6",
+        "outputId": "8a50a515-6e4a-40e0-8294-aeeaccae548d"
       },
       "execution_count": 81,
       "outputs": [
@@ -2683,11 +2698,11 @@
         "HW3"
       ],
       "metadata": {
-        "id": "KKWwOBgfkYh2",
-        "outputId": "a355493f-4198-4b82-edb9-6ff40b2792c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KKWwOBgfkYh2",
+        "outputId": "a355493f-4198-4b82-edb9-6ff40b2792c3"
       },
       "execution_count": 82,
       "outputs": [
